# phal-test-app

./: README.md  meson.build  meson.options  phal-test-app_git.bb
service_files/: phal-test-app@.service.in
src/: phal_app.cpp  phal_app_main.cpp
